# foresightAI

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE.md  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: hazards.py  locations.py  recommendations.py
backend/app/core/: config.py
backend/app/db/: ingest_pilot_data.py  seed_rdf_graph.py  session.py
backend/app/models/: models.py  schemas.py
backend/app/services/: knowledge_graph_utils.py  reasoning_service.py  sparql_queries.py
backend/tests/: test_knowledge_graph_utils.py
frontend/: README.md  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: HazardMap.tsx  LocationSelector.tsx  ReasoningPanel.tsx
frontend/lib/: api.ts
ontology/core/: foresight.owl
ontology/datasets/: datasets.owl  kenya_pilot_datasets.owl
ontology/geography/: geography.owl
ontology/hazards/: hazards.owl
