[project]
name = "flood-foresight-api"
version = "1.0.0"
description = "Backend API for Flood Foresight Knowledge Graph and AI Platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi",
    "uvicorn[standard]",

    # Database
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",

    # Cache
    "redis",

    # HTTP
    "httpx",

    # Semantic Web / Knowledge Graph
    "rdflib",
    "owlready2",
    "pyshacl",
    "sparqlwrapper",

    # GIS
    "geopandas",
    "shapely",
    "rasterio",
    "pyproj",
    "fiona",
    "xarray",
    "rioxarray",

    # Configuration
    "python-dotenv",
    "pydantic-settings",

    # Logging
    "loguru",

    # Testing
    "pytest",

    # AI / LLM
    "openai",
    "langchain",
    "llama-index",
    "sentence-transformers",
    "qdrant-client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

pythonpath = [
    ".",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"